--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "cozy-konnector-template",
+  "name": "cozy-konnector-coopcycle",
   "version": "1.0.0",
   "description": "",
   "repository": {
     "type": "git",
-    "url": "git@github.com:konnectors/template.git"
+    "url": "git@github.com:konnectors/coopcycle.git"
   },
   "keywords": [],
   "author": "Cozy Cloud",
@@ -50,5 +50,9 @@
     "svgo": "1.3.2",
     "webpack": "4.43.0",
     "webpack-cli": "3.3.11"
+  },
+  "prettier": {
+    "trailingComma": "none",
+    "arrowParens": "avoid"
   }
 }
