--- a/manifestConfig.json
+++ b/manifestConfig.json
@@ -38,5 +38,9 @@
   {
     "name": "York (York Collective)",
     "value": "10"
+  },
+  {
+    "name": "Nantes (Naofood)",
+    "value": "11"
   }
 ]
